--- a/css/style.css
+++ b/css/style.css
@@ -212,7 +212,7 @@ menu ul {
     font-size: 30px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-    color: #99c1da;
+    color: #0015ff;
 }
 
 .galeria {
